<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Account_edit_dailog">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:overScrollMode="ifContentScrolls"
        android:scrollbarSize="0dp"
        android:scrollbars="vertical">

        <LinearLayout
            android:id="@+id/account_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="top"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/name"
                style="@style/TextInputLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_above="@+id/mail"
                android:layout_margin="10dp"
                android:background="#00FFFFFF">

                <EditText
                    android:id="@+id/et_name"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_centerHorizontal="true"
                    android:focusableInTouchMode="true"
                    android:fontFamily="@font/rubik_light"
                    android:hint="Username"
                    android:inputType="textPersonName"
                    android:padding="15dp"
                    android:textAllCaps="false"
                    android:textColor="#000"
                    android:textSize="15sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/phone"
                style="@style/TextInputLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="#00FFFFFF">

                <EditText
                    android:id="@+id/et_phone"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="10dp"
                    android:ems="10"
                    android:fontFamily="@font/rubik_light"
                    android:hint="Phone number"
                    android:inputType="phone"
                    android:padding="15dp"
                    android:selectAllOnFocus="true"
                    android:textAllCaps="false"
                    android:textColor="#000"
                    android:textSize="15sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/TextInputLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="#00FFFFFF">

                <EditText
                    android:id="@+id/et_job"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_above="@+id/et_phone"
                    android:ems="10"
                    android:fontFamily="@font/rubik_light"
                    android:hint="Job title"
                    android:inputType="textShortMessage"
                    android:padding="15dp"
                    android:selectAllOnFocus="true"
                    android:textAllCaps="false"
                    android:textColor="#000"
                    android:textSize="15sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/TextInputLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="#00FFFFFF">

                <EditText
                    android:id="@+id/et_company"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_above="@+id/et_phone"
                    android:ems="10"
                    android:fontFamily="@font/rubik_light"
                    android:hint="Company Type"
                    android:inputType="textShortMessage"
                    android:padding="15dp"
                    android:selectAllOnFocus="true"
                    android:textAllCaps="false"
                    android:textColor="#000"
                    android:textSize="15sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/TextInputLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="#00FFFFFF">

                <EditText
                    android:id="@+id/et_company_name"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_above="@+id/et_phone"
                    android:ems="10"
                    android:fontFamily="@font/rubik_light"
                    android:hint="Company Name"
                    android:inputType="textShortMessage"
                    android:padding="15dp"
                    android:selectAllOnFocus="true"
                    android:textAllCaps="false"
                    android:textColor="#000"
                    android:textSize="15sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/add"
                style="@style/TextInputLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="#00FFFFFF">

                <EditText
                    android:id="@+id/et_address"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_centerInParent="true"
                    android:layout_centerHorizontal="true"
                    android:ems="10"
                    android:fontFamily="@font/rubik_light"
                    android:hint="@string/postal_address"
                    android:inputType="textPostalAddress"
                    android:padding="15dp"
                    android:selectAllOnFocus="true"
                    android:textAllCaps="false"
                    android:textColor="#000"
                    android:textSize="15sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/TextInputLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="#00FFFFFF">

                <EditText
                    android:id="@+id/et_pincode"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_above="@+id/et_phone"
                    android:ems="10"
                    android:fontFamily="@font/rubik_light"
                    android:hint="@string/pin_code"
                    android:importantForAutofill="no"
                    android:inputType="number"
                    android:padding="15dp"
                    android:selectAllOnFocus="true"
                    android:textAllCaps="false"
                    android:textColor="#000"
                    android:textSize="15sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_update"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/btn_custom"
                android:fontFamily="@font/rubik_medium"
                android:gravity="center"
                android:text="@string/update"
                android:textAllCaps="false"
                android:textColor="#fff" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>